--- a/css/media.css
+++ b/css/media.css
@@ -368,14 +368,16 @@
 
 
 /* support */
+/* support */
 @media (min-width: 992px) {
   .support__list {
     flex-direction: row;
     flex-wrap: wrap;
+    gap: 10px; /* Добавьте gap для управления отступами */
   }
 
   .support__item {
-    width: calc((100% - 10px) / 2);
+    width: calc(50% - 5px); /* Учитываем отступы */
   }
 }
 
@@ -384,16 +386,25 @@
     font-size: 41px;
   }
 
+  .support__list {
+    gap: 15px; /* Подберите оптимальное расстояние между элементами */
+  }
+
   .support__item {
-    width: calc((100% - 20px) / 3);
+    width: calc(33.33% - 10px); /* Учитываем отступы */
   }
 }
 
 @media (min-width: 1800px) {
+  .support__list {
+    gap: 20px; /* Подберите оптимальное расстояние между элементами */
+  }
+
   .support__item {
-    width: calc((100% - 30px) / 4);
+    width: calc(25% - 15px); /* Учитываем отступы */
   }
 }
+
 
 
 /* drupal */
